--- a/OnTheMap/Base.lproj/Main.storyboard
+++ b/OnTheMap/Base.lproj/Main.storyboard
@@ -22,14 +22,14 @@
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="PUU-LR-C7c">
                                 <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                                 <subviews>
-                                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" image="udacity" translatesAutoresizingMaskIntoConstraints="NO" id="a4p-6b-fJP">
+                                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="udacity" translatesAutoresizingMaskIntoConstraints="NO" id="a4p-6b-fJP">
                                         <rect key="frame" x="172" y="37" width="256" height="256"/>
                                         <constraints>
                                             <constraint firstAttribute="width" constant="256" id="3Pb-40-7nM"/>
                                             <constraint firstAttribute="height" constant="256" id="8K1-K1-VDr"/>
                                         </constraints>
                                     </imageView>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" usesAttributedText="YES" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ym3-UA-XLN">
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" usesAttributedText="YES" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ym3-UA-XLN">
                                         <rect key="frame" x="155" y="301" width="300" height="20"/>
                                         <constraints>
                                             <constraint firstAttribute="width" constant="300" id="Qg6-rq-Acy"/>
@@ -45,7 +45,7 @@
                                         </attributedString>
                                         <nil key="highlightedColor"/>
                                     </label>
-                                    <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Password" clearsOnBeginEditing="YES" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="ZqT-nv-lFG" userLabel="password">
+                                    <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Password" clearsOnBeginEditing="YES" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="ZqT-nv-lFG" userLabel="password">
                                         <rect key="frame" x="155" y="367" width="300" height="30"/>
                                         <color key="backgroundColor" red="0.99677062029999997" green="0.808633991" blue="0.16895177519999999" alpha="0.49364224140000001" colorSpace="calibratedRGB"/>
                                         <constraints>
@@ -61,7 +61,7 @@
                                             </userDefinedRuntimeAttribute>
                                         </userDefinedRuntimeAttributes>
                                     </textField>
-                                    <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="IgX-aj-Pvs">
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="IgX-aj-Pvs">
                                         <rect key="frame" x="155" y="405" width="300" height="34"/>
                                         <color key="backgroundColor" red="0.94509803920000002" green="0.33725490200000002" blue="0.1176470588" alpha="1" colorSpace="calibratedRGB"/>
                                         <constraints>
@@ -74,17 +74,7 @@
                                             <action selector="logInAction:" destination="onv-41-avN" eventType="touchUpInside" id="UCP-KS-MRu"/>
                                         </connections>
                                     </button>
-                                    <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="W01-3g-Z6O">
-                                        <rect key="frame" x="162" y="447" width="285" height="36"/>
-                                        <fontDescription key="fontDescription" type="system" pointSize="20"/>
-                                        <state key="normal" title="Don't have an account? Sign up">
-                                            <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                                        </state>
-                                        <connections>
-                                            <action selector="signUpAction:" destination="onv-41-avN" eventType="touchUpInside" id="bWW-Tv-Wlf"/>
-                                        </connections>
-                                    </button>
-                                    <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Email" clearsOnBeginEditing="YES" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="O2v-tJ-ZXT" userLabel="email">
+                                    <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Email" clearsOnBeginEditing="YES" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="O2v-tJ-ZXT" userLabel="email">
                                         <rect key="frame" x="154" y="329" width="300" height="30"/>
                                         <color key="backgroundColor" red="0.99677062029999997" green="0.808633991" blue="0.16895177519999999" alpha="0.49364224140000001" colorSpace="calibratedRGB"/>
                                         <constraints>
@@ -93,28 +83,38 @@
                                         </constraints>
                                         <color key="textColor" red="1" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                        <textInputTraits key="textInputTraits" secureTextEntry="YES"/>
+                                        <textInputTraits key="textInputTraits"/>
                                         <userDefinedRuntimeAttributes>
                                             <userDefinedRuntimeAttribute type="color" keyPath="_placeholderLabel.textColor">
                                                 <color key="value" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                             </userDefinedRuntimeAttribute>
                                         </userDefinedRuntimeAttributes>
                                     </textField>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="W01-3g-Z6O">
+                                        <rect key="frame" x="162.5" y="447" width="285" height="36"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="20"/>
+                                        <state key="normal" title="Don't have an account? Sign up">
+                                            <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                        </state>
+                                        <connections>
+                                            <action selector="signUpAction:" destination="onv-41-avN" eventType="touchUpInside" id="bWW-Tv-Wlf"/>
+                                        </connections>
+                                    </button>
                                 </subviews>
                                 <color key="backgroundColor" red="0.99215686274509807" green="0.5607843137254902" blue="0.15686274509803921" alpha="1" colorSpace="calibratedRGB"/>
                                 <constraints>
                                     <constraint firstItem="W01-3g-Z6O" firstAttribute="top" secondItem="IgX-aj-Pvs" secondAttribute="bottom" constant="8" id="3Cw-cm-PUC"/>
                                     <constraint firstItem="ym3-UA-XLN" firstAttribute="top" secondItem="a4p-6b-fJP" secondAttribute="bottom" constant="8" id="Fsa-ke-2fJ"/>
                                     <constraint firstItem="IgX-aj-Pvs" firstAttribute="top" secondItem="ZqT-nv-lFG" secondAttribute="bottom" constant="8" id="K3z-mf-5GB"/>
-                                    <constraint firstItem="ZqT-nv-lFG" firstAttribute="centerX" secondItem="PUU-LR-C7c" secondAttribute="centerX" id="UEH-DL-mZI"/>
-                                    <constraint firstItem="O2v-tJ-ZXT" firstAttribute="centerX" secondItem="PUU-LR-C7c" secondAttribute="centerX" id="WWS-u6-gdY"/>
-                                    <constraint firstItem="ym3-UA-XLN" firstAttribute="centerX" secondItem="PUU-LR-C7c" secondAttribute="centerX" id="X5Y-YJ-rhT"/>
+                                    <constraint firstItem="ZqT-nv-lFG" firstAttribute="centerX" secondItem="PUU-LR-C7c" secondAttribute="centerX" constant="5" id="UEH-DL-mZI"/>
+                                    <constraint firstItem="O2v-tJ-ZXT" firstAttribute="centerX" secondItem="PUU-LR-C7c" secondAttribute="centerX" constant="4" id="WWS-u6-gdY"/>
+                                    <constraint firstItem="ym3-UA-XLN" firstAttribute="centerX" secondItem="PUU-LR-C7c" secondAttribute="centerX" constant="5" id="X5Y-YJ-rhT"/>
                                     <constraint firstItem="a4p-6b-fJP" firstAttribute="centerX" secondItem="PUU-LR-C7c" secondAttribute="centerX" id="aDA-Lm-vqb"/>
-                                    <constraint firstItem="IgX-aj-Pvs" firstAttribute="centerX" secondItem="PUU-LR-C7c" secondAttribute="centerX" id="bND-2C-9j1"/>
+                                    <constraint firstItem="IgX-aj-Pvs" firstAttribute="centerX" secondItem="PUU-LR-C7c" secondAttribute="centerX" constant="5" id="bND-2C-9j1"/>
                                     <constraint firstItem="O2v-tJ-ZXT" firstAttribute="top" secondItem="ym3-UA-XLN" secondAttribute="bottom" constant="8" id="eqX-45-1Hg"/>
                                     <constraint firstItem="W01-3g-Z6O" firstAttribute="centerX" secondItem="PUU-LR-C7c" secondAttribute="centerX" constant="4.5" id="ibH-km-79x"/>
                                     <constraint firstItem="ZqT-nv-lFG" firstAttribute="top" secondItem="O2v-tJ-ZXT" secondAttribute="bottom" constant="8" id="tPH-jE-8d0"/>
-                                    <constraint firstItem="O2v-tJ-ZXT" firstAttribute="centerY" secondItem="PUU-LR-C7c" secondAttribute="centerY" id="xUN-0Z-gLw"/>
+                                    <constraint firstItem="O2v-tJ-ZXT" firstAttribute="centerY" secondItem="PUU-LR-C7c" secondAttribute="centerY" constant="44" id="xUN-0Z-gLw"/>
                                 </constraints>
                             </view>
                         </subviews>
@@ -127,6 +127,7 @@
                         </constraints>
                     </view>
                     <connections>
+                        <outlet property="emailTextField" destination="O2v-tJ-ZXT" id="iFa-hb-EDb"/>
                         <outlet property="logInButton" destination="IgX-aj-Pvs" id="45E-OL-jS3"/>
                         <outlet property="passwordTextField" destination="ZqT-nv-lFG" id="tZh-YD-hQ8"/>
                         <outlet property="signUpButton" destination="W01-3g-Z6O" id="Xsf-Kc-aMe"/>
