--- a/OnTheMap/Base.lproj/Main.storyboard
+++ b/OnTheMap/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="10117" systemVersion="15F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="onv-41-avN">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="10117" systemVersion="15G31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="onv-41-avN">
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
@@ -36,11 +36,7 @@
                         <barButtonItem key="leftBarButtonItem" image="logout" id="QkI-zR-T0S"/>
                         <rightBarButtonItems>
                             <barButtonItem systemItem="refresh" id="D6R-f3-EL2"/>
-                            <barButtonItem image="pin1_25" id="zdz-pm-t36">
-                                <connections>
-                                    <segue destination="lzA-3i-fWp" kind="show" identifier="showFromMaps" id="ITb-Np-jXs"/>
-                                </connections>
-                            </barButtonItem>
+                            <barButtonItem image="pin1_25" id="zdz-pm-t36"/>
                         </rightBarButtonItems>
                     </navigationItem>
                     <connections>
@@ -216,61 +212,39 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="4C9-us-veh" userLabel="topView">
-                                <rect key="frame" x="0.0" y="0.0" width="600" height="101"/>
+                                <rect key="frame" x="0.0" y="0.0" width="600" height="128"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                             </view>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="M3R-OD-ckZ" userLabel="middleView">
-                                <rect key="frame" x="0.0" y="100" width="600" height="456"/>
+                                <rect key="frame" x="0.0" y="127" width="600" height="385.5"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                             </view>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="KZW-cB-eQp" userLabel="bottomView">
-                                <rect key="frame" x="0.0" y="556" width="600" height="44"/>
+                                <rect key="frame" x="0.0" y="512" width="600" height="88"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                             </view>
-                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="Zzb-9b-Teg" userLabel="allStack">
-                                <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
-                                <subviews>
-                                    <stackView opaque="NO" contentMode="scaleToFill" misplaced="YES" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="gZ8-aJ-NFx" userLabel="topStack">
-                                        <rect key="frame" x="0.0" y="0.0" width="600" height="101"/>
-                                    </stackView>
-                                    <stackView opaque="NO" contentMode="scaleToFill" misplaced="YES" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="kP4-fj-RYP" userLabel="middleStack">
-                                        <rect key="frame" x="0.0" y="101" width="600" height="456"/>
-                                    </stackView>
-                                    <stackView opaque="NO" contentMode="scaleToFill" misplaced="YES" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="YQz-lg-ucO" userLabel="bottomStack">
-                                        <rect key="frame" x="0.0" y="557" width="600" height="43"/>
-                                    </stackView>
-                                </subviews>
-                                <constraints>
-                                    <constraint firstItem="kP4-fj-RYP" firstAttribute="top" secondItem="gZ8-aJ-NFx" secondAttribute="bottom" id="fB1-Ao-WJR"/>
-                                    <constraint firstItem="YQz-lg-ucO" firstAttribute="top" secondItem="kP4-fj-RYP" secondAttribute="bottom" id="hmO-6T-SRq"/>
-                                </constraints>
-                            </stackView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstItem="Zzb-9b-Teg" firstAttribute="bottom" secondItem="3i8-IG-3XL" secondAttribute="bottomMargin" id="2Su-sU-Lxa"/>
-                            <constraint firstItem="Zzb-9b-Teg" firstAttribute="top" secondItem="3i8-IG-3XL" secondAttribute="topMargin" id="5O3-N0-ZXE"/>
-                            <constraint firstItem="M3R-OD-ckZ" firstAttribute="leading" secondItem="3i8-IG-3XL" secondAttribute="leadingMargin" constant="-20" id="7By-Yg-IeP"/>
-                            <constraint firstItem="KZW-cB-eQp" firstAttribute="leading" secondItem="3i8-IG-3XL" secondAttribute="leadingMargin" constant="-20" id="7Nd-ED-28A"/>
-                            <constraint firstItem="4C9-us-veh" firstAttribute="leading" secondItem="3i8-IG-3XL" secondAttribute="leadingMargin" constant="-20" id="9d5-9a-Gom"/>
-                            <constraint firstAttribute="trailingMargin" secondItem="KZW-cB-eQp" secondAttribute="trailing" constant="-20" id="9ns-KV-nB8"/>
-                            <constraint firstItem="4C9-us-veh" firstAttribute="top" secondItem="3i8-IG-3XL" secondAttribute="topMargin" id="Bze-td-Byy"/>
-                            <constraint firstItem="M3R-OD-ckZ" firstAttribute="bottom" secondItem="pbP-9R-IV8" secondAttribute="top" id="H1b-cP-Ips"/>
-                            <constraint firstItem="KZW-cB-eQp" firstAttribute="height" secondItem="3i8-IG-3XL" secondAttribute="height" multiplier="0.15" constant="-46" id="HYM-G7-LbJ"/>
-                            <constraint firstItem="KZW-cB-eQp" firstAttribute="bottom" secondItem="3i8-IG-3XL" secondAttribute="bottomMargin" id="Is9-cO-ETr"/>
-                            <constraint firstItem="Zzb-9b-Teg" firstAttribute="leading" secondItem="3i8-IG-3XL" secondAttribute="leadingMargin" constant="-20" id="JdI-Za-4aa"/>
-                            <constraint firstItem="M3R-OD-ckZ" firstAttribute="height" secondItem="3i8-IG-3XL" secondAttribute="height" multiplier="0.64" constant="72" id="KFx-9x-tnG"/>
-                            <constraint firstItem="KZW-cB-eQp" firstAttribute="leading" secondItem="3i8-IG-3XL" secondAttribute="leadingMargin" constant="-20" id="TF0-IN-k0f"/>
-                            <constraint firstItem="YQz-lg-ucO" firstAttribute="height" secondItem="KZW-cB-eQp" secondAttribute="height" id="WJq-t4-Pyd"/>
-                            <constraint firstAttribute="trailingMargin" secondItem="KZW-cB-eQp" secondAttribute="trailing" constant="-20" id="Wg2-m1-Lmf"/>
-                            <constraint firstItem="4C9-us-veh" firstAttribute="height" secondItem="3i8-IG-3XL" secondAttribute="height" multiplier="0.21" constant="-25" id="Yk5-eG-F5N"/>
-                            <constraint firstItem="kP4-fj-RYP" firstAttribute="height" secondItem="M3R-OD-ckZ" secondAttribute="height" id="bDz-aH-bY9"/>
-                            <constraint firstItem="KZW-cB-eQp" firstAttribute="bottom" secondItem="3i8-IG-3XL" secondAttribute="bottomMargin" id="hlb-b0-pYP"/>
-                            <constraint firstItem="gZ8-aJ-NFx" firstAttribute="height" secondItem="4C9-us-veh" secondAttribute="height" id="k6z-Bl-gdj"/>
-                            <constraint firstAttribute="trailingMargin" secondItem="Zzb-9b-Teg" secondAttribute="trailing" constant="-20" id="q8h-lH-bEZ"/>
-                            <constraint firstAttribute="trailingMargin" secondItem="M3R-OD-ckZ" secondAttribute="trailing" constant="-20" id="uV8-um-obV"/>
-                            <constraint firstAttribute="trailingMargin" secondItem="4C9-us-veh" secondAttribute="trailing" constant="-20" id="wPb-CB-0Tn"/>
+                            <constraint firstItem="M3R-OD-ckZ" firstAttribute="leading" secondItem="3i8-IG-3XL" secondAttribute="leadingMargin" constant="-20" id="DaV-b1-Wgh"/>
+                            <constraint firstItem="4C9-us-veh" firstAttribute="top" secondItem="3i8-IG-3XL" secondAttribute="topMargin" id="Dhs-xF-ToQ"/>
+                            <constraint firstItem="4C9-us-veh" firstAttribute="height" secondItem="3i8-IG-3XL" secondAttribute="height" multiplier="0.21" constant="2" id="ElU-n4-Hte"/>
+                            <constraint firstItem="4C9-us-veh" firstAttribute="leading" secondItem="3i8-IG-3XL" secondAttribute="leadingMargin" constant="-20" id="JPQ-gm-XWU"/>
+                            <constraint firstItem="KZW-cB-eQp" firstAttribute="leading" secondItem="3i8-IG-3XL" secondAttribute="leadingMargin" constant="-20" id="MjO-Y1-UZX"/>
+                            <constraint firstItem="M3R-OD-ckZ" firstAttribute="top" secondItem="wFI-J6-5n5" secondAttribute="bottom" multiplier="0.21" constant="122.8" id="XKG-Id-xMQ"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="KZW-cB-eQp" secondAttribute="trailing" constant="-20" id="com-OS-56s"/>
+                            <constraint firstItem="KZW-cB-eQp" firstAttribute="height" secondItem="3i8-IG-3XL" secondAttribute="height" multiplier="0.1466" id="h4I-wL-sBJ"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="M3R-OD-ckZ" secondAttribute="trailing" constant="-20" id="hn5-mQ-8mS"/>
+                            <constraint firstItem="KZW-cB-eQp" firstAttribute="height" secondItem="3i8-IG-3XL" secondAttribute="height" id="jeo-3s-0FJ"/>
+                            <constraint firstItem="pbP-9R-IV8" firstAttribute="top" secondItem="KZW-cB-eQp" secondAttribute="bottom" id="kJC-F9-JXy"/>
+                            <constraint firstItem="M3R-OD-ckZ" firstAttribute="height" secondItem="3i8-IG-3XL" secondAttribute="height" multiplier="0.64" constant="1.5" id="sBg-zQ-Naz"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="4C9-us-veh" secondAttribute="trailing" constant="-20" id="uKe-Po-GKS"/>
                         </constraints>
+                        <variation key="default">
+                            <mask key="constraints">
+                                <exclude reference="jeo-3s-0FJ"/>
+                            </mask>
+                        </variation>
                     </view>
                     <toolbarItems/>
                     <connections>
@@ -448,7 +422,6 @@
                             <barButtonItem image="pin1_25" id="PLm-nT-u81" userLabel="pinButton">
                                 <connections>
                                     <action selector="addPinAction:" destination="tMZ-5E-Q8W" id="mjp-Sg-pGi"/>
-                                    <segue destination="lzA-3i-fWp" kind="show" identifier="segueFromTable" id="nFk-rA-rk2"/>
                                 </connections>
                             </barButtonItem>
                         </rightBarButtonItems>
@@ -473,7 +446,4 @@
         <image name="pin2x" width="66" height="66"/>
         <image name="udacity" width="256" height="256"/>
     </resources>
-    <inferredMetricsTieBreakers>
-        <segue reference="nFk-rA-rk2"/>
-    </inferredMetricsTieBreakers>
 </document>
